force-app/main/default/objects/Content__c/Content__c.object-meta.xml
<CustomObject>
    <description>All the Content I&apos;ve watched including Movies, Series, Documentaries.</description>
    <label>Content</label>
    <nameField>
        <label>Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>