force-app/main/default/objects/Content__c/fields/Content_Number__c.field-meta.xml
<CustomField>
    <fullName>Content_Number__c</fullName>
    <externalId>true</externalId>
    <label>Content Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>