force-app/main/default/objects/Content__c/fields/Kind__c.field-meta.xml
<CustomField>
    <fullName>Kind__c</fullName>
    <label>Kind</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Documentary</fullName>
                <default>true</default>
                <label>Documentary</label>
            </value>
            <value>
                <fullName>Feature Film</fullName>
            </value>
            <value>
                <fullName>Series</fullName>
            </value>
            <value>
                <fullName>Short Film</fullName>
            </value>
            <value>
                <fullName>Standup Special</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>