force-app/main/default/objects/Content__c/fields/Release_Year__c.field-meta.xml
<CustomField>
    <fullName>Release_Year__c</fullName>
    <label>Release Year</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>