force-app/main/default/objects/Content__c/fields/Verdict__c.field-meta.xml
<CustomField>
    <fullName>Verdict__c</fullName>
    <label>Verdict</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Above Avg</fullName>
            </value>
            <value>
                <fullName>Avg</fullName>
            </value>
            <value>
                <fullName>Below Avg</fullName>
            </value>
            <value>
                <fullName>Great</fullName>
            </value>
            <value>
                <fullName>Masterpeice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>