force-app/main/default/objects/Content__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Content_Number__c</columns>
    <columns>Release_Year__c</columns>
    <columns>Consumption_Year__c</columns>
    <columns>Consumption_Month__c</columns>
    <columns>Year_Month__c</columns>
    <columns>NAME</columns>
    <columns>Place__c</columns>
    <columns>Language__c</columns>
    <columns>Rating__c</columns>
    <columns>Verdict__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>