force-app/main/default/objects/Content__c/listViews/Theatre_Visits.listView-meta.xml
<ListView>
    <fullName>Theatre_Visits</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Content_Number__c</columns>
    <columns>Release_Year__c</columns>
    <columns>Consumption_Year__c</columns>
    <columns>Consumption_Month__c</columns>
    <columns>NAME</columns>
    <columns>Place__c</columns>
    <columns>Language__c</columns>
    <columns>Rating__c</columns>
    <columns>Verdict__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Place__c</field>
        <operation>equals</operation>
        <value>Theatre</value>
    </filters>
    <label>Theatre Visits</label>
</ListView>