force-app/main/default/objects/Content__c/listViews/X2023_Content.listView-meta.xml
<ListView>
    <fullName>X2023_Content</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Content_Number__c</columns>
    <columns>Release_Year__c</columns>
    <columns>Consumption_Year__c</columns>
    <columns>Consumption_Month__c</columns>
    <columns>NAME</columns>
    <columns>Place__c</columns>
    <columns>Language__c</columns>
    <columns>Rating__c</columns>
    <columns>Verdict__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Consumption_Year__c</field>
        <operation>equals</operation>
        <value>2023</value>
    </filters>
    <label>2023 Content</label>
</ListView>